fix: set token.variable color to purple
the default theme configuration sets the color to a shade of blue that
doesn't look very good on the page.

it adds it via style properties though, which requires the !important to
get it overwritten.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -66,6 +66,10 @@
 .token.command.shell-symbol {
   color: var(--color-shell-symbol);
 }
+.token.variable {
+  color: var(--color-purple)!important;
+  font-style: normal!important;
+}
 
 .header-github-link:hover {
   opacity: 0.6;
